fix contrast violations

--- a/styles/base.css
+++ b/styles/base.css
@@ -6,7 +6,7 @@
 --light:#f4f4f4;
 --white:#ffffff;
 --orange: #e3ac14;
---green: #2e8b57;
+--green: #08234b;;
 --radius:8px;
 
 }
@@ -20,6 +20,7 @@ box-sizing:border-box;
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: var(--light-gray);
+  color: var(--dark);
 }
 
 /* ===== HEADER ===== */
